--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.3",
@@ -30,11 +31,16 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "postcss-loader": "^7.0.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.6"
   }
 }
